--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 
 python:
   - "2.7"
-#  - "3.5"
+  - "3.5"
 
 # we are using pre-dumped tests files
 # and not testing the dumping capacity of haystack.
@@ -28,7 +28,7 @@ install:
 ## we need coveralls
   - pip -q install coveralls
 ## install with requirements
-  - pip install -r requirements.txt --use-mirrors
+  - pip install -r requirements.txt
 
 before_script:
 # we also need the large test files (memory dumps)
