--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 construct<2.8
 decorator
 future
+# -e git://github.com/trolldbois/python-haystack.git#egg=python-haystack/development
+# -e git://github.com/{ username }/{ reponame }.git@{ tag name }#egg={ desired egg name }
 haystack
 networkx
 numpy
