--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 construct<2.8
 decorator
 future
--e git://github.com/trolldbois/python-haystack.git@development#egg=haystack
-# -e git://github.com/{ username }/{ reponame }.git@{ tag name }#egg={ desired egg name }
+# -e git://github.com/trolldbois/python-haystack.git@development#egg=haystack
 haystack
 networkx
 numpy
