--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ install:
   - pip -q install coveralls
 ## install with requirements
   - pip install -r requirements.txt
+## we might need mock
+  - pip install mock
 
 before_script:
 # we also need the large test files (memory dumps)
