--- a/.travis.yml
+++ b/.travis.yml
@@ -76,7 +76,7 @@ before_script:
 script:
 # run tests. Need root for memory dumps tests.
 #  - python setup.py test
-  - coverage run --source=haystack-reverse setup.py test
+  - coverage run --source=haystack setup.py test
 
 after_success:
   - coveralls
