--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,11 @@ python:
 sudo: false
 
 # travis-ci upgrades it. so it is already there.
-#addons:
-#  apt:
-#    packages:
-#    - unzip
+addons:
+  apt:
+    packages:
+    - graphviz
+
 
 # install any dependencies required
 install:
